# Janusz

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AI_ENHANCEMENT_PLAN.md  Makefile  PDF_TO_YAML_CONVERSION_INDEX.md  README.md  TOON_KNOWLEDGE_BASE_INDEX.md  pdf_yaml_converter.py  pyproject.toml  test_ai_integration.py  test_type_error.py  toon.py  toon.sh  toon_cursor_integration_demo.md
.cursor/: README.md  rules.md  rules.yaml
.cursor/prompts/: 01_plan_then_execute.md  01_plan_then_execute.toon  01_plan_then_execute.yaml  02_tdd_workflow.md  02_tdd_workflow.toon  02_tdd_workflow.yaml  03_safe_refactor.md  03_safe_refactor.toon  03_safe_refactor.yaml  04_debug_investigate.md  04_debug_investigate.toon  04_debug_investigate.yaml  05_code_review.md  05_code_review.toon  05_code_review.yaml  06_api_endpoint.md  06_api_endpoint.toon  06_api_endpoint.yaml  07_multi_agent_orchestrator.md  07_multi_agent_orchestrator.toon  07_multi_agent_orchestrator.yaml  api_endpoint.md  api_endpoint.toon  api_endpoint.yaml  debug_error.md  debug_error.toon  debug_error.yaml  multi_agent_orchestrator.md  multi_agent_orchestrator.toon  multi_agent_orchestrator.yaml  refactor_function.md  refactor_function.toon  refactor_function.yaml  research_analysis.md  research_analysis.toon  research_analysis.yaml
.cursor/rules/: agent-orchestration.mdc  fastapi-endpoints.mdc  python-development.mdc  security.mdc  testing.mdc
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
examples/: README.md  gui_demo.py  rag_demo.py
examples/inputs/: sample_architecture.md  sample_architecture.toon  sample_architecture.yaml  sample_spec.toon  sample_spec.txt  sample_spec.yaml
examples/outputs/: sample_spec_janusz.yaml
examples/scripts/: measure_token_savings.py
schemas/: api_documentation_schema.json  deployment_guide_schema.json  security_best_practices_schema.json  tutorial_guide_schema.json
scripts/: create_sample_schemas.py  gui.py  toon.sh
src/janusz/: __init__.py  cli.py  converter.py  extraction_patterns.py  json_to_toon.py  models.py  nlp_utils.py  toon_adapter.py  toon_cli.py
src/janusz/ai/: __init__.py  ai_content_analyzer.py
src/janusz/gui/: __init__.py  __main__.py  main_app.py
src/janusz/orchestrator/: __init__.py  ai_orchestrator.py
src/janusz/prompts/: __init__.py  prompt_optimizer.py  prompt_templates.py  prompt_tester.py
src/janusz/rag/: __init__.py  embeddings.py  rag_system.py  vector_store.py
src/janusz/schemas/: __init__.py  schema_manager.py
tests/: __init__.py  conftest.py  test_converter.py  test_edge_cases.py  test_json_to_toon.py  test_toon_adapter.py
