[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janusz"
version = "1.0.0"
description = "Document-to-TOON pipeline for AI agent knowledge bases"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "pdfplumber>=0.9.0",
    "pyyaml>=6.0",
    "python-docx>=1.0.0",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/your-username/janusz"
Repository = "https://github.com/your-username/janusz"
Issues = "https://github.com/your-username/janusz/issues"

[project.scripts]
janusz = "janusz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
