[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janusz"
version = "1.0.0"
description = "Document-to-TOON pipeline for AI agent knowledge bases"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "pdfplumber>=0.9.0",
    "pyyaml>=6.0",
    "python-docx>=1.0.0",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pip-audit>=2.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "codecov>=2.1.0",
]
nlp = [
    "spacy>=3.0.0",
    "nltk>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/your-username/janusz"
Repository = "https://github.com/your-username/janusz"
Issues = "https://github.com/your-username/janusz/issues"

[project.scripts]
janusz = "janusz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

# Allow gradual adoption
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
# Third-party libraries without type stubs
module = [
    "yaml",
    "pdfplumber.*",
    "docx.*",
    "bs4.*",
    "html2text.*",
    "nltk.*",
    "spacy.*",
    "PIL.*",
    "fitz.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Generated code and build artifacts
module = [
    "src.*",
    "tests.*",
    "setup",
    "distutils.*",
    "pkg_resources"
]
ignore_errors = false

[[tool.mypy.overrides]]
# Test files can be less strict
module = "tests.*"
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = false

[[tool.mypy.overrides]]
# Example scripts are not part of main codebase
module = "examples.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage in subprocess

[dependency-groups]
dev = [
    "pip-audit>=2.7.3",
]
